update post content

--- a/source/_posts/點是否存在三角形內.md
+++ b/source/_posts/點是否存在三角形內.md
@@ -119,12 +119,15 @@ bool CheckInsideTriangle(Vector2 p)
 - $ D_4 = u (\vec{V_1} \cdot \vec{V_1}) + v (\vec{V_1} \cdot \vec{V_2}) = u D_1 + v D_3 $
 - $ D_5 = u (\vec{V_1} \cdot \vec{V_2}) + v (\vec{V_2} \cdot \vec{V_2}) = u D_3 + v D_2 $
 
-解二聯立，先消除 $v$：
+解二聯立。
+
+#### 消除 $v$
 
 - $ D_4D_2 = u D_1D_2 + v D_3D_2 $
 - $ D_5D_3 = u D_3D_3 + v D_2D_3 $
 
 得
+
 $
 D_4D_2 - D_5D_3 = u [D_1D_2 -D_3D_3]
 $
@@ -138,7 +141,7 @@ u =
 {[D_1D_2 -D_3D_3]}
 $
 
-換消除 $u$：
+#### 消除 $u$
 
 - $ D_4D_3 = u D_1D_3 + v D_3D_3 $
 - $ D_5D_1 = u D_3D_1 + v D_2D_1 $
@@ -172,13 +175,13 @@ D_3D_3
 ]}
 $（讓 $u$、$v$ 的分數部分一樣可提出）
 
-分數部分：
+#### 分數部分
 
 $
 InvDenom = \cfrac{1}{[D_2D_1 -D_3D_3 ]}
 $
 
-最後得到：
+整理後得：
 
 - $ u = [D_2 D_4 - D_3 D_5] \* InDenom $
 - $ v = [D_1 D_5 - D_3 D_4] \* InDenom $
