update post content

--- a/source/_posts/點是否存在三角形內.md
+++ b/source/_posts/點是否存在三角形內.md
@@ -123,8 +123,8 @@ bool CheckInsideTriangle(Vector2 p)
 
 #### 消除 $v$
 
-- $ D_4D_2 = u D_1D_2 + v D_3D_2 $
-- $ D_5D_3 = u D_3D_3 + v D_2D_3 $
+- $ D_4D_2 = u D_1D_2 + \cancel{v D_3D_2} $
+- $ D_5D_3 = u D_3D_3 + \cancel{v D_2D_3} $
 
 得
 
@@ -143,8 +143,8 @@ $
 
 #### 消除 $u$
 
-- $ D_4D_3 = u D_1D_3 + v D_3D_3 $
-- $ D_5D_1 = u D_3D_1 + v D_2D_1 $
+- $ D_4D_3 = \cancel{u D_1D_3} + v D_3D_3 $
+- $ D_5D_1 = \cancel{u D_3D_1} + v D_2D_1 $
 
 得
 
