fix missing parameter

--- a/source/_posts/純律小實驗.md
+++ b/source/_posts/純律小實驗.md
@@ -28,7 +28,7 @@ $ 2^{-2}\lambda_a ${% btn ::::justoni://example/value/!4::fa-regular fa-circle-p
 
 在一個八度的正中央，也就是 $ \cfrac{3}{2}\lambda_a $ {% btn ::::justoni://example/value/*3!2::fa-regular fa-circle-play %}。
 
-$ \lambda_a + \cfrac{3}{2}\lambda_a $ {% btn ::::justoni://example/value/*3!2,example/value::fa-regular fa-circle-play %} 聽起來也是十分和諧的，因為頻率間
+$ \lambda_a + \cfrac{3}{2}\lambda_a $ {% btn ::::justoni://example/value/*3!2,example/value::fa-regular fa-circle-play %} 聽起來也是十分和諧的，因為頻率間比值數字單純。
 
 ## 五度相生
 
