--- a/source/_posts/純律小實驗.md
+++ b/source/_posts/純律小實驗.md
@@ -52,7 +52,7 @@ $ \lambda_a + \cfrac{3}{2}\lambda_a $ {% btn ::::justoni://example/value/*3!2,ex
 11. $ \cfrac{19683}{16384} \cdot \cfrac{3}{2} \lambda_a = \cfrac{59049}{32768} \lambda_a $ {% btn ::::justoni://example/value/*59049!32768::fa-regular fa-circle-play %}
 12. $ \cfrac{59049}{32768} \cdot \cfrac{3}{2} \lambda_a = \cfrac{177147}{65536} \lambda_a $ {% btn ::::justoni://example/value/*177147!65536::fa-regular fa-circle-play %}，降低八度 $ \cfrac{177147}{65536} \cdot \cfrac{1}{2} \lambda_a = \cfrac{177147}{131072} \lambda_a $ {% btn ::::justoni://example/value/*177147!131072::fa-regular fa-circle-play %}
 
-找到第 13 個音 $ \cfrac{177147}{131072} \cdot \cfrac{3}{2} \lambda_a = \cfrac{531441}{262144} \lambda_a ${% btn ::::justoni://example/value/*531441!262144::fa-regular fa-circle-play %}，聽起來跟 $ 2 \lambda_a ${% btn ::::justoni://example/value/*2::fa-regular fa-circle-play %} 聽起來一樣，但又不完全一樣。
+找到第 13 個音 $ \cfrac{177147}{131072} \cdot \cfrac{3}{2} \lambda_a = \cfrac{531441}{262144} \lambda_a ${% btn ::::justoni://example/value/*531441!262144::fa-regular fa-circle-play %}，聽起來跟 $ 2 \lambda_a ${% btn ::::justoni://example/value/*2::fa-regular fa-circle-play %} 一樣，但又不完全一樣。
 
 而在繼續迭代也沒有意義了，第 13 個音就直接用$ 2 \lambda_a $。
 
