--- a/source/_posts/25-歲第一次教召.md
+++ b/source/_posts/25-歲第一次教召.md
@@ -16,9 +16,9 @@ tags: [雜記]
 家兄大我個 4 歲，自然比我早退伍，他今年才收到教召令的說。。。
 {% endnote %}
 
-總之，我獲得了出席 5/19 ~ 5/23 為期五天的大型男性聯誼的資格，而且不是自由參加。
+總之，我獲得了出席 5/19 ~ 5/23 為期五天大型男性聯誼的資格，而且不是自由參加。
 
-另外，這種教召訓不會在營區內，他們借了某個宮廟（后里萬聖行宮，這應該可以外流吧？）作為場地，接下來五天吃喝拉撒睡都要在這個宮廟裡面進行。
+另外，這種教召訓不會在營區內，他們借了某個宮廟（后里萬聖行宮，這應該可以外流吧？）作為場地，接下來五天吃喝拉撒睡都要在這裡進行。
 
 {% notel red 為甚麼要在宮廟？ %}
 長官給的解釋是：沒有適合的場地，也沒錢。<br>
@@ -68,9 +68,9 @@ tags: [雜記]
 
 ## 生活與活動空間
 
-操課就在宮廟前的大庭院，蚊子很多又很毒雖然有點大支蚊香，但其實沒啥用。
+操課就在宮廟前的大庭院，蚊子很多又很毒，雖然有點大支蚊香，但其實沒啥用。
 
-睡覺就是在你的小帳棚裡面，我是沒開過睡袋啦，大熱天的，但即使我自認是睡眠品質算好的類型，說實話這五天基本上沒熟睡過，晚上都是半夢半醒的狀態到隔天起床。
+睡覺就是在你的小帳篷裡面，我是沒開過睡袋啦，大熱天的，但即使我自認是睡眠品質算好的類型，說實話這五天基本上沒熟睡過，晚上都是半夢半醒的狀態到隔天起床。
 
 另外，洗澡在流動浴室完成，轉到中間水不熱，轉到最左又會突然變太燙，所以要左左右右微操，洗個澡還要給熱水器控怒，算是很有生活了。
 
@@ -97,13 +97,21 @@ tags: [雜記]
 所以我名義上是人事兵，實際上啥都不會喔。
 {% endnote %}
 
+{% note gray %}
+另外，我嚴重懷疑，就是人事兵這個職位讓我快速被教召。
+
+因為當時抽籤人事兵相對一般兵少非常多（我當時製籤的，好像 300 裡面只有 10？），連隊編制可以沒有步槍兵，但一定要有人事兵。
+{% endnote %}
+
 我們的寢室就是行宮退役下來的舊大堂，單人帳已經幫大家撐好開好，找到別著自己名字的帳篷，這就是要陪伴我五天的休息空間：
 
 - 一個單人帳
 - 旁邊可以置板凳的寬度
 
 {% note purple %}
-單人帳大小約 60cm x 175cm，我比較矮，還能打直身子睡進去
+單人帳大小約 60cm x 175cm，我比較矮，還能打直身子睡進去。
+
+裡面的睡墊是充氣式的，有口水潔癖的注意一下。
 {% endnote %}
 
 ### 整裝
@@ -142,9 +150,9 @@ tags: [雜記]
 
 ### 夜教
 
-教官給大家看幾個地獄尖兵的片段跟特戰訓練的影片，對阿，影片拍出來的導演剪輯版總是特別好看，但能夠加入迷彩人生大精彩的確實也得是高手。
+教官給大家看幾個地獄尖兵的片段跟特戰訓練的影片，對阿，影片拍出來導演剪輯版總是特別好看，但能夠加入迷彩人生大精彩的確實也得是高手。
 
-然後因為成功嶺才有靶場，所以各位步槍兵東西收拾收拾，明天一早好上車移地訓練。
+因為成功嶺才有靶場，所以各位步槍兵東西收拾收拾，明天一早好上車移地訓練。
 
 ## 第三天
 
@@ -165,7 +173,7 @@ tags: [雜記]
 
 ### 戰術聯合
 
-就是巡邏、陣地遷移加上一些團隊成員配合的模擬，拿著 65k2 跑來跑去身體是有點吃不消。
+就是巡邏、陣地遷移加上一些團隊成員配合的模擬，拿著 65K2 跑來跑去身體是有點吃不消。
 
 因為實在沒有裝備，所以想像力就是你的超能力，要假裝丟手雷。
 
@@ -178,7 +186,7 @@ RT，三個姿勢各十發，打 175m 的電子靶。
 {% note gray %}
 順帶一提，前一天歸零射擊，特戰班長說他說他耳塞都只戴一邊，另一邊就可以聽靶場指揮官說話。
 
-仔細想想，這可能就是我沒辦法成為特戰的一員的原因，打完歸零射擊靶整個腦瓜子就嗡嗡的，這次打 30 發就乖乖戴兩邊耳塞了。
+仔細想想，這可能就是我沒辦法成為特戰一員的原因，打完歸零射擊整個腦瓜子就嗡嗡的，這次打 30 發就乖乖戴兩邊耳塞了。
 {% endnote %}
 
 以前打的是黃色靶，這次軍綠色的在草叢裡就更難辨識了，雖然有限時 2 分半內完成射擊，但還是有全部打完，感覺沒很困難，就是跪射跟立射，我沒強壯到可以用身體抵銷射擊後座力，每打完一發都要重新瞄準。
