--- a/source/_posts/夢回-2023-VR-開發-上.md
+++ b/source/_posts/夢回-2023-VR-開發-上.md
@@ -6,18 +6,20 @@ tags: [雜談]
 
 ## 前情提要
 
-大學期間接手了教授接的教育部 VR 教材專案，當時一體機效能相當差，所以目標平台是需要 PC 運算頭戴裝置輸出的 HTC Vive。
-
-除了 PC 端性能要有一定的水平，另一方面 VR 頭顯也並不便宜，再加上開發者市場也不完整導致應用程式少，於是 VR 就變成了某種身分象徵、昂貴享受，想爽玩還需要一定的技術背景。
+大學期間接手了教授接的教育部 VR 教材專案，而畢業三年後，最近又聯絡上我，要做新的平台移植，所以紀錄一下這個 VR 專案的開發史。
 
 {% note purple %}
 
 這篇比較不會涉及到專業知識，實作的部分之後再整理成另一篇。
-另外因為有點太長了，所以拆成上下兩篇。
+另外因為有點長了，所以拆成上下兩篇。
 
 {% endnote %}
 
 ## 原專案開發
+
+專案啟動在 2020 年 10 月，當時一體機效能相當差，所以目標平台是需要 PC 運算頭戴裝置輸出的 HTC Vive。
+
+除了 PC 端性能要有一定的水平，另一方面 VR 頭顯也並不便宜，再加上開發者市場也不完整導致應用程式少，於是 VR 就變成了某種身分象徵、昂貴享受，想爽玩還需要一定的技術背景。
 
 當時為了推廣 VR 教材，除了 Vive，額外選擇發布在 Cardboard VR 平台，也就是透過 VR 眼鏡盒將手機當作顯示器，不可避免的是少了控制器及位置感應，於是閹割了原版本的許多機能，算是用「看」的，而不是「玩」。
 
