--- a/source/_posts/政府的案子都爛爛的.md
+++ b/source/_posts/政府的案子都爛爛的.md
@@ -381,6 +381,12 @@ checkWindow --> [*]: 無變動
 
 這個流程圖可能給小學生用 `Scratch` 都能拉出來，更不用說原本的邏輯實現可能還有 bug 存在，完全沒經過重構，這就是想到啥寫啥的經典案例。
 
+{% note gray %}
+
+2025/08/20 更新：其實不是大中小解析度，那只是寫死的數值傳給 `Client` 端檢查用的。
+
+{% endnote %}
+
 ## 歸納一下問題
 
 可以先解說一下，解碼器是透過在封包開頭的 `id` 來決定是否要繼續解碼資料。
@@ -415,6 +421,19 @@ int i2 = arr[offset + 0] << (0 * 8) |
 
 {% endfolding %}
 
+## 是黑盒子不代表不能改
+
+關於傳輸，底層代碼沒那麼複雜，更不用說黑盒子插件還是直接使用 `.NET` 提供的 `UdpClient` 實現通訊。
+
+除去閃屏問題後，能改的地方還是太多了，簡單列下面幾個：
+
+1. 不要透過通知 `id` 來達成畫面配對，明明就有辦法取得 `IP`，用 `IP` 來決定用渲染到哪個 `UI Texture` 不香嗎
+2. 在 `UDP` 環境，雙端都應該要定時 `Heartbeat`，才不會有意外發生
+3. 寫 `C#` ，請善用非同步
+4. 如果希望追求效能極致，減少 `Array` 的 `Copy`，使用 `Span` 或 `ReadonlySpan` 來做 `Event Callback` 比較好
+5. 一對一模式根本就沒有禁止其他 `Client` 傳資料給 `Server`（由於直接使用廣播），導致不能有效降低頻寬使用
+6. 對於 `Parse`、集合操作等等這些容易出例外的邏輯，都應該要捕捉例外，無論用 `TryParse` 或是直接寫 `try catch`
+
 ## 結論是啥
 
 並不是說一定要寫狀態機，但全部的狀態都用 `if else condition` 來完成，不用 `switch case`，也沒有做任何方法封裝，純粹是給大家找麻煩而已。
@@ -423,7 +442,7 @@ int i2 = arr[offset + 0] << (0 * 8) |
 
 在撰寫程式碼時，基本上會在效能與可維護（可讀性）之間取捨，但從程式碼來看就是兩個都不要，既沒提升效能，也困難維護。
 
-我常說寫程式要向搞藝術一樣慢慢雕，邏輯實現並不難，但要理解語言的特性並且活用語法糖；而 C# 作為一個先進的語言，反編譯了不少 `Unity` 遊戲，也是很久沒看到這種傷眼睛的東西了。
+我常說寫程式要像搞藝術一樣慢慢雕，邏輯實現並不難，但要理解語言的特性並且活用語法糖；而 C# 作為一個先進的語言，反編譯了不少 `Unity` 遊戲，也是很久沒看到這種傷眼睛的東西了。
 
 {% folding gray::😋 %}
 
