Add excerpt to all blog posts

--- a/source/_posts/25-歲第一次教召.md
+++ b/source/_posts/25-歲第一次教召.md
@@ -2,6 +2,7 @@
 title: 25 歲第一次教召
 date: 2025-05-23 20:25:14
 tags: [雜記]
+excerpt: "本文記錄作者首次教召的經歷，從報到、訓練到生活細節，分享教召期間的感受與觀察。"
 ---
 
 幾小時前剛拿到解召令，趕緊的，趁身體還沒忘記教召感覺的時候，振筆疾書。
