--- a/source/_posts/夢回-2020-VR-開發-下.md
+++ b/source/_posts/夢回-2020-VR-開發-下.md
@@ -2,6 +2,7 @@
 title: 夢回 2020 VR 開發（下）
 date: 2025-07-25 00:00:00
 tags: [雜談]
+excerpt: "本文延續 VR 教材專案，介紹第二次移植至 Meta Quest 與 HTC Vive Focus 的過程，並探討 OpenXR 與 XR Toolkit 的應用。"
 ---
 
 ## 前情提要
