--- a/source/_posts/政府的案子都爛爛的.md
+++ b/source/_posts/政府的案子都爛爛的.md
@@ -2,6 +2,7 @@
 title: 政府的案子都爛爛的
 date: 2025-08-17 17:30:17
 tags: [雜談, C#, Unity]
+excerpt: "本文分享作者在政府專案開發中的實際經驗，探討架構設計、代碼混淆及常見問題，並反思政府案子在執行過程中的挑戰與改進空間。"
 ---
 
 ## 前情提要
