--- a/source/_posts/純律小實驗.md
+++ b/source/_posts/純律小實驗.md
@@ -2,6 +2,7 @@
 title: 純律小實驗
 date: 2025-04-01 22:37:36
 tags: [音樂, 雜談]
+excerpt: "本文以鋼琴學習為背景，介紹純律推算的原理與方法，並透過數學公式與實驗步驟，說明音高、八度及五度相生的和聲關係，增進對音樂理論的理解。"
 ---
 
 ## 前言
