--- a/source/_posts/點是否存在三角形內.md
+++ b/source/_posts/點是否存在三角形內.md
@@ -6,6 +6,7 @@ tags:
   - Unity
 mathjax: true
 date: 2025-03-16 21:41:08
+excerpt: "本文介紹判斷點是否位於三角形內的數學方法，包含叉乘法與重心法，並附上 Unity/C# 範例程式，適用於 UI 元件與圖形運算需求。"
 ---
 
 
