--- a/source/_posts/夢回-2020-VR-開發-上.md
+++ b/source/_posts/夢回-2020-VR-開發-上.md
@@ -2,6 +2,7 @@
 title: 夢回 2020 VR 開發（上）
 date: 2025-07-13 14:33:32
 tags: [雜談]
+excerpt: "本文記錄作者參與教育部 VR 教材專案的開發歷程，分享不同平台移植、技術選型及實際開發經驗。"
 ---
 
 ## 前情提要
